// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for ActablePredictive's sendWebEvent destination action: all fields 1`] = `
Object {
  "data": Array [
    Object {
      "customer_id": "&rvjad3FpzhL^Q[3k9",
      "datetime": 1612137600,
      "interaction_type": "&rvjad3FpzhL^Q[3k9",
      "stream_key": "&rvjad3FpzhL^Q[3k9",
      "utm_campaign": "&rvjad3FpzhL^Q[3k9",
      "utm_medium": "&rvjad3FpzhL^Q[3k9",
      "utm_source": "&rvjad3FpzhL^Q[3k9",
    },
  ],
}
`;

exports[`Testing snapshot for ActablePredictive's sendWebEvent destination action: required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customer_id": "&rvjad3FpzhL^Q[3k9",
      "datetime": 1612137600,
      "interaction_type": "&rvjad3FpzhL^Q[3k9",
      "stream_key": "&rvjad3FpzhL^Q[3k9",
    },
  ],
}
`;
